# TimeTracker

./: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
src/: App.vue  api.js  helpers.js  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: api.rs  main.rs
src/assets/: tailwind.css
src/locales/: en.json  ru.json
src/router/: index.js
src/views/: AuthorizationPage.vue  TimeTrackingPage.vue
