[package]
name = "tracking"
version = "0.0.1"
description = "Time Tracking App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [ "tray-icon", "macos-private-api", "image-png"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

reqwest = { version = "0.12.9", features = ["json"] }
base64 = "0.22.1"
serde-xml-rs = "0.6.0"

colored = "2.0"

dotenv = "0.15"
lazy_static = "1.4"

tauri-plugin-positioner = { version = "2.0.0", features = ["tray-icon"] }

